--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.2.0",
     "supertest": "^2.0.1"
   }
 }
